feat: api-docs - implement swagger for product
