# src/routes/productRoutes.ts
@@ -8,8 +8,14 @@ const router = express.Router();
 
 router.get("/", ProductController.GetAllProducts);
 router.get("/:id", ProductController.GetProductById);
-router.put("/:id", validate(updateProductSchema), productImg.single('image'), ProductController.UpdateProduct);
-router.post("/", validate(createProductSchema), productImg.single('image'), ProductController.CreateProduct);
+router.put("/:id", productImg.single('image'), validate(updateProductSchema), ProductController.UpdateProduct);
+router.post("/", productImg.single('image'), validate(createProductSchema), ProductController.CreateProduct);
 router.delete("/:id", ProductController.DeleteProduct);
+
+
+// swagger
+router.put("/edit/:id", productImg.single('image'), validate(updateProductSchema), ProductController.UpdateProduct);
+router.post("/add", productImg.single('image'), validate(createProductSchema), ProductController.CreateProduct);
+router.delete("/delete/:id", ProductController.DeleteProduct);
 
 export default router;
