# src/swagger/openapi.yml
@@ -316,6 +316,343 @@ paths:
                   message:
                     type: string
                     example: Internal Server Error
+  /product:
+    get:
+      summary: Get all products
+      description: Retrieve a list of all products.
+      tags:
+        - Product
+      responses:
+        '200':
+          description: List of products retrieved successfully.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Product'
+              example:
+                - id: 1
+                  name: Mikrotik RB951 2nd
+                  desc: Mikrotik RB951 2nd
+                  image: "https://res.cloudinary.com/dulz7fjbz/image/upload/v1732121115/newus/fjygshhjbdl3gque6ijn.png"
+                  category_id: 1
+                  createdAt: "2024-11-20T13:04:50.668Z"
+                  updatedAt: "2024-11-20T13:04:50.668Z"
+        '500':
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  message:
+                    type: string
+                    example: Internal Server Error
+  /product/{id}:
+    get:
+      summary: Get a product by ID
+      description: Retrieve details of a specific product by its ID.
+      tags:
+        - Product
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the product to retrieve
+          schema:
+            type: integer
+            example: 1
+      responses:
+        '200':
+          description: Product retrieved successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+              example:
+                id: 1
+                name: Mikrotik RB951 2nd
+                desc: Mikrotik RB951 2nd
+                image: "https://res.cloudinary.com/dulz7fjbz/image/upload/v1732121115/newus/fjygshhjbdl3gque6ijn.png"
+                category_id: 1
+                createdAt: "2024-11-20T13:04:50.668Z"
+                updatedAt: "2024-11-20T13:04:50.668Z"
+        '404':
+          description: Product not found.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 404
+                  message:
+                    type: string
+                    example: Product not found
+                  data:
+                    type: object
+                    nullable: true
+                    example: null
+        '500':
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  message:
+                    type: string
+                    example: Internal Server Error
+  /product/add:
+    post:
+      summary: Create a new product
+      description: Create a new product with the specified details.
+      tags:
+        - Product
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: Name of the product
+                  example: Mikrotik RB951 2nd
+                desc:
+                  type: string
+                  description: Description of the product
+                  example: Mikrotik RB951 2nd
+                image:
+                  type: string
+                  format: binary
+                  description: Image file of the product
+                category_id:
+                  type: integer
+                  description: ID of the category to which the product belongs
+                  example: 1
+      responses:
+        '201':
+          description: Product created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+              example:
+                id: 1
+                name: Mikrotik RB951 2nd
+                desc: Mikrotik RB951 2nd
+                image: "https://res.cloudinary.com/dulz7fjbz/image/upload/v1732121115/newus/fjygshhjbdl3gque6ijn.png"
+                category_id: 1
+                createdAt: "2024-11-20T13:04:50.668Z"
+                updatedAt: "2024-11-20T13:04:50.668Z"
+        '400':
+          description: Validation error.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  message:
+                    type: string
+                    example: Validation Error
+                  errors:
+                    type: array
+                    items:
+                      type: string
+                    example:
+                      - "name is required"
+                      - "category_id is required"
+        '500':
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  message:
+                    type: string
+                    example: Internal Server Error
+  /product/edit/{id}:
+    put:
+      summary: Update a product by ID
+      description: Update the details of a specific product.
+      tags:
+        - Product
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the product to update
+          schema:
+            type: integer
+            example: 1
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: Name of the product
+                  example: Mikrotik RB951 2nd
+                desc:
+                  type: string
+                  description: Description of the product
+                  example: Mikrotik RB951 2nd
+                image:
+                  type: string
+                  format: binary
+                  description: Image file of the product (optional)
+                category_id:
+                  type: integer
+                  description: ID of the category to which the product belongs
+                  example: 1
+      responses:
+        '200':
+          description: Product updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+              example:
+                id: 1
+                name: Mikrotik RB951 2nd
+                desc: Mikrotik RB951 2nd
+                image: "https://res.cloudinary.com/dulz7fjbz/image/upload/v1732121115/newus/fjygshhjbdl3gque6ijn.png"
+                category_id: 1
+                createdAt: "2024-11-20T13:04:50.668Z"
+                updatedAt: "2024-11-20T13:04:50.668Z"
+        '400':
+          description: Validation error.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  message:
+                    type: string
+                    example: Validation Error
+                  errors:
+                    type: array
+                    items:
+                      type: string
+                    example:
+                      - "name is required"
+                      - "category_id is required"
+        '404':
+          description: Product not found.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 404
+                  message:
+                    type: string
+                    example: Product not found
+                  data:
+                    type: object
+                    nullable: true
+                    example: null
+        '500':
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  message:
+                    type: string
+                    example: Internal Server Error
+  /product/delete/{id}:
+    delete:
+      summary: Delete a product by ID
+      description: Delete a specific product by its ID.
+      tags:
+        - Product
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the product to delete
+          schema:
+            type: integer
+            example: 1
+      responses:
+        '200':
+          description: Product deleted successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: Product deleted successfully
+                  data:
+                    type: object
+                    nullable: true
+                    example: null
+        '404':
+          description: Product not found.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 404
+                  message:
+                    type: string
+                    example: Product not found
+                  data:
+                    type: object
+                    nullable: true
+                    example: null
+        '500':
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  message:
+                    type: string
+                    example: Internal Server Error
+
 components:
   schemas:
     Category:
@@ -335,3 +672,24 @@ components:
           type: string
           format: date-time
           description: Time when the category was last updated
+  schemas:
+    Product:
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        desc:
+          type: string
+        image:
+          type: string
+          format: uri
+        category_id:
+          type: integer
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
